# mailerlite-sync

./: README.md  pyproject.toml
mailerlite_sync/: cli.py
tests/: test_mailerlite_sync.py
